2010-05-01 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/plugin/plugin.py: Fix some
	  incorrect invocations that didn't pass verbose
	  parameter (and were therefore no-ops)

	* usr/share/time-slider/lib/time_slider/timesliderd.py:
	  Fix monthly period calculation. Now handles period
	  increments > 12 months and period increments that
	  land on december (originally logged as bugster
	  CR #6904417)

2010-05-01 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/time_slider/setupgui.py:
	  Cache all GUI configuration values at startup and
	  use them later to compare changes in configuration
	  state. Only apply the minimum set of configuration
	  changes necessary instead of previous method of
	  blindly applying everything, even if unchanged.
	  Configuration is much much faster now, especially
	  for minor configuration changes.
	  Recognise previously configured backup devices and
	  ask the user if they want to start using it again
	  instead of rejecting it as belonging to another 
	  system.
	  Remove duplicate import of os.path modules.

2010-04-28 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/plugin/rsync/backup.py:
	  Add removal of partial backups missing a  matching 
	  snapshot in the backup queue. They are zombies.
	  When catching an rsync exception, change directory
	  to "/" so that pfexec doesn't freak out when trying
	  to release the snapshot. pfexec bails out when it
	  tries to add cwd to it's path if cwd is non-existent 
	  which can be the case if the backup device suddenly
	  goes offline.

2010-04-27 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/plugin/rsync/backup.py:
	  Remember to also delete log files when deleting backups.

2010-04-27 Niall Power - <niall.power@oracle.com>

	* usr/share/time-slider/lib/plugin/rsync/backup.py:
	  Exit if effective UID of process is not 0 (root)

2010-04-27 Niall Power - <niall.power@oracle.com>
